chore: release 0.15.6-rc.7